--- a/mentorhome.css
+++ b/mentorhome.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: url('../images/bg1.png') no-repeat center center fixed;
+    background: url('images/bg1.png') no-repeat center center fixed;
     background-size: cover;
     color: #ffffff;
     font-family: 'Poppins', sans-serif;
